--- a/styletest6.css
+++ b/styletest6.css
@@ -10,11 +10,13 @@
     font-size: 14px;
     height: fit-content;
     margin: 0;
-    
+    animation: fadeIn 3s;
   }
+
+  @keyframes fadeIn {from {opacity:0} to{opacity:1} }
   .logo {
     width: 10vh;
-    margin-left: 1vh;
+        margin-left: 1vh;
   }
 
   .banner {
