--- a/styletest6.css
+++ b/styletest6.css
@@ -51,8 +51,46 @@
     margin-top: -4vw;
     border-radius: 3px;
     display: flex;
-    font-size: 3.4vw;
+    font-size: 2.4vh;
     margin-left: -9vw;
+}
+
+.bestSellingJackets {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin: -2vh 0 0 0;
+    font-size: 5vw;
+}
+
+.jacketContainer {
+    display: grid;
+    grid-template-areas:
+      "jacket1 jacket2"
+      "jacket3 jacket4";
+      margin-left: 9vh;
+  }
+  
+  .microLightJacket {
+    grid-area: jacket1;
+  }
+  
+  .expeditionJacket {
+    grid-area: jacket2;
+  }
+  
+  .senjaJacket {
+    grid-area: jacket3;
+  }
+  
+  .ulrikenJacket {
+    grid-area: jacket4;
+  }
+
+
+  .microlight-jacket_img, .expedions-jacket_img, .ulriken-jacket, .senja-jacket_img {
+    width: 31vw;
+    margin-left: -1vh;
 }
 
 @media screen and (min-width: 768px) {
@@ -72,7 +110,48 @@
         font-size: 2.1vw;
         margin-left: -6vh;
     }
+
+    h3 {
+        font-size: 3vw;
+    }
+
+    
+    .jacketContainer {
+        display: grid;
+        grid-template-areas:
+            "jacket1 jacket2"
+            "jacket3 jacket4";
+        padding: 14vw;
+        margin-top: -14vw;
+        margin-left: 15vw;
+    }
+    .microlight-jacket_img, .expedions-jacket_img, .ulriken-jacket, .senja-jacket_img {
+        width: 18vw;
+        margin-left: -1vh;
+    }
+   
 }
+
+@media screen and (min-width: 1024px) {
+    .microlight-jacket_img, .expedions-jacket_img, .ulriken-jacket, .senja-jacket_img {
+        width: 11vw;
+        margin-left: -1vh;
+    }
+    .jacketContainer {
+        display: grid;
+        grid-template-areas:
+            "jacket1 jacket2"
+            "jacket3 jacket4";
+        padding: 29vw;
+        margin-top: -29vw;
+        margin-left: 7vw;
+    }
+    h3 {
+        font-size: 2.2vw;
+    }
+
+}
+
   
   
   
