--- a/stylestest2.css
+++ b/stylestest2.css
@@ -7,10 +7,15 @@
 body {
   background-color: #e5ebf1;
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  animation: fadeIn 0.5s;
 }
+@keyframes fadeIn {from {opacity:0} to{opacity:1} }
 
 .logo {
   width: 10vh;
+  margin-left: 1vh;
 }
 
 .jacketInfo {
@@ -45,6 +50,22 @@ body {
 .ulrikenJacket {
   grid-area: jacket4;
 }
+.footer {
+  background-color: rgba(29, 36, 42, 0.9);
+  padding: 0em 2em 1em 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 35vh 0 0 0;
+}
+
+
+.footerRainyDays, a {
+  margin: 0 1em 0 0;
+  color: #bfbfbf;
+  text-decoration: none;
+}
+
 
 @media screen and (min-width: 768px) {
   h1 {
