--- a/styletest4.css
+++ b/styletest4.css
@@ -9,10 +9,16 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   height: fit-content;
+  margin: 0;
+  padding: 0;
+  animation: fadeIn 0.5s;
 }
+@keyframes fadeIn {from {opacity:0} to{opacity:1} }
 
 .logo {
   width: 10vh;
+  margin-left: 1vh;
+  margin-top: -2vh;
 }
 
 .contact_us_form {
@@ -168,6 +174,22 @@ td {
 
 h1 {
   font-size: 7vw;
+}
+
+.footer {
+  background-color: rgba(29, 36, 42, 0.9);
+  padding: 0em 2em 1em 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10vh 0 0 0;
+}
+
+
+.footerRainyDays, a {
+  margin: 0 1em 0 0;
+  color: #bfbfbf;
+  text-decoration: none;
 }
 @media screen and (min-width: 768px) {
   h1 {
