--- a/styletest6.css
+++ b/styletest6.css
@@ -12,6 +12,10 @@
     margin: 0;
     animation: fadeIn 3s;
   }
+  
+  html {
+    scroll-behavior: smooth;
+  }
 
   @keyframes fadeIn {from {opacity:0} to{opacity:1} }
   .logo {
@@ -42,6 +46,7 @@
   h1 {
     margin: 25vh 0 0 0;
     font-size: 5vw;
+    text-shadow: 0px 4px 17px rgb(0 0 0), 0px 4px 4px rgb(0 0 0 / 25%);
   }
   .welcome_page_button {
     background-color: #6979f8;
@@ -63,7 +68,7 @@
     font-size: 5vw;
 }
 
-.jacketContainer {
+#jacketContainer {
     display: grid;
     grid-template-areas:
       "jacket1 jacket2"
@@ -93,10 +98,51 @@
     margin-left: -1vh;
 }
 
+
+.footer {
+    background-color: rgba(29, 36, 42, 0.9);
+    padding: 0em 2em 1em 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.rainyDays, a {
+    margin: 0 1em 0 0;
+    color: #bfbfbf;
+    text-decoration: none;
+}
+
+.arrowImg {
+    width: 16%;
+    margin-left: 5.9vh;
+    margin-top: 1vh;
+}
+.learnMore {
+    color: white;
+    margin: 84vh 4vh 0 0;
+    font-size: 3vh;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+
+.Bookmark {
+    position: absolute;
+}
+.submit_btn {
+    z-index: 1;
+  }
+
+  .homeVideo {
+    display: none
+}
+
 @media screen and (min-width: 768px) {
     h1 {
         margin: 25vh 0 0 0;
         font-size: 3vw;
+    }
+    .homeVideo {
+        display: none
     }
 
     .welcome_page_button {
@@ -116,7 +162,7 @@
     }
 
     
-    .jacketContainer {
+    #jacketContainer {
         display: grid;
         grid-template-areas:
             "jacket1 jacket2"
@@ -137,7 +183,7 @@
         width: 11vw;
         margin-left: -1vh;
     }
-    .jacketContainer {
+    #jacketContainer {
         display: grid;
         grid-template-areas:
             "jacket1 jacket2"
@@ -149,9 +195,37 @@
     h3 {
         font-size: 2.2vw;
     }
+    .homeVideo {
+        display: block;
+        width: 400px;
+        margin-top: -28%;
+        margin-left: 35vw;
+        margin-bottom: 43%;
+        border-radius: 26px;
+    }
+    .footer {
+        background-color: rgba(29, 36, 42, 0.9);
+        padding: 0em 2em 1em 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -38%;
 
 }
+}
 
-  
+@media screen and (min-width: 1440px) {
+    .homeVideo {
+        display: block;
+    }
+    .footer {
+        background-color: rgba(29, 36, 42, 0.9);
+        padding: 0em 2em 1em 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -2%;
+}
+}
   
   
