--- a/stylestest2.css
+++ b/stylestest2.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #e5ebf1;
+  background-color: #5888b7;
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
