--- a/styletest4.css
+++ b/styletest4.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #e5ebf1;
+  background-color: #5888b7;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   height: fit-content;
