--- a/stylesstest5.css
+++ b/stylesstest5.css
@@ -18,8 +18,14 @@ body {
   margin-left: 1vh;
 }
 
+main {
+  text-align: center;
+}
+
 h1 {
   font-size: 5.8vw;
+  text-align: center;
+  margin-left: 4%;
 }
 
 .thankYou {
@@ -47,7 +53,7 @@ h1 {
   border-radius: 3px;
   display: flex;
   font-size: 4.9vw;
-  margin-left: 28vw;
+  margin-left: 9vw;
 }
 
 .footer {
@@ -95,7 +101,7 @@ h1 {
     border-radius: 3px;
     display: flex;
     font-size: 2.4vw;
-    margin-left: 14vw;
+    margin-left: 4vw;
 }
 }
 
@@ -128,7 +134,7 @@ h1 {
   border-radius: 3px;
   display: flex;
   font-size: 2.4vw;
-  margin-left: 9vw;
+  margin-left: 5vw;
 }
 }
 
@@ -146,6 +152,6 @@ h1 {
     border-radius: 3px;
     display: flex;
     font-size: 2.4vw;
-    margin-left: 5.5vw;
+    margin-left: 2.5vw;
 }
 }
