--- a/styles6.css
+++ b/styles6.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-color: #5888b7;
+    background-color: #45a3ff;
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
@@ -33,7 +33,7 @@ html {
 .logo {
     width: 10vh;
     margin-left: 1vh;
-    margin-top: -4vh;
+    margin-top: 0vh;
 }
 article {
     font-size: 12px;
@@ -141,7 +141,7 @@ article {
     .about_img {
         width:60vw;
     }
-
+    
 }
 
 
