--- a/stylestest3.css
+++ b/stylestest3.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #5888b7;
+  background-color: #45a3ff;
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
@@ -26,7 +26,7 @@ body {
 
 .jacketDetails {
   font-size: 6vw;
-  margin-top: 0%;
+    margin-top: -4%;
 }
 .dropdown_menu {
   border-radius: -74px;
@@ -72,6 +72,9 @@ footer {
   color: #bfbfbf;
   text-decoration: none;
 }
+h3 {
+  font-size: 2vh;
+}
 
 
 @media screen and (min-width: 768px) {
@@ -90,6 +93,8 @@ footer {
 
   .jacketDetails {
     font-size: 3.3vw;
+    margin-left: 4%;
+    
   }
   .product-information {
     font-size: 3.3vw;
@@ -134,7 +139,9 @@ footer {
   }
 
   .jacketDetails {
-    font-size: 2.1vw;
+    font-size: 1.8vw;
+    margin-top: -1%;
+    margin-left: 18px;
   }
   .product-information {
     font-size: 2vw;
