--- a/styles7.css
+++ b/styles7.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #5888b7;
+  background-color: #45a3ff;
   font-family: "Open Sans", sans-serif;
   margin: 0;
   padding: 0;
