--- a/css/checkout.css
+++ b/css/checkout.css
@@ -13,7 +13,14 @@ body {
   padding: 0;
   animation: fadeIn 0.5s;
 }
-@keyframes fadeIn {from {opacity:0} to{opacity:1} }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 .logo {
   width: 10vh;
@@ -114,6 +121,7 @@ input[type="number"] {
 .summary {
   text-align: center;
   font-size: 4.4vw;
+  margin-left: -9%;
 }
 .summary,
 .discount,
@@ -189,8 +197,8 @@ h1 {
   margin: 10vh 0 0 0;
 }
 
-
-.footerRainyDays, a {
+.footerRainyDays,
+a {
   margin: 0 1em 0 0;
   color: #bfbfbf;
   text-decoration: none;
@@ -328,10 +336,9 @@ h1 {
     font-size: 2.5vw;
   }
 
-
   .my-order_jacket {
     font-size: 3vw;
-}
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -345,11 +352,11 @@ h1 {
     margin-left: -49%;
     margin-top: -2%;
     grid-area: jacket2;
-}
+  }
 
-.my-order_jacket {
-  font-size: 2vw;
-}
+  .my-order_jacket {
+    font-size: 2vw;
+  }
 
   #name {
     margin-bottom: 1%;
